--- a/src/BL/BL.csproj
+++ b/src/BL/BL.csproj
@@ -1,12 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
- <PropertyGroup>
-  <NoWarn>$(NoWarn);NU1605</NoWarn>
-  <Version>8.0.0.0</Version>
-  <AssemblyVersion>8.0.0.0</AssemblyVersion>
-  <FileVersion>8.0.0.0</FileVersion>
-  <InformationalVersion>8.0.0.0-09/23/2023 19:02:32</InformationalVersion>
-  <Copyright>Dr. Holger Schwichtenberg, www.IT-Visions.de 2019-2023</Copyright>
- </PropertyGroup>
+
+ <!--Hinweis: <TargetFramework> und Versionsnummer+Metadaten für App kommen aus Directory.Build.props-->
+ 
  <PropertyGroup Label="Globals">
   <SccProjectName>SAK</SccProjectName>
   <SccProvider>SAK</SccProvider>
@@ -15,10 +10,9 @@
  </PropertyGroup>
 
  <PropertyGroup>
-  <TargetFramework>net8.0</TargetFramework>
+  <NoWarn>$(NoWarn);NU1605</NoWarn>
   <AssemblyName>BL</AssemblyName>
   <PackageId>BL</PackageId>
-  <NetStandardImplicitPackageVersion>1.6.1</NetStandardImplicitPackageVersion>
   <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
   <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
   <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
