--- a/Test/BlazorTests/BlazorTests.csproj
+++ b/Test/BlazorTests/BlazorTests.csproj
@@ -1,18 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
- <PropertyGroup>
-  <TargetFramework>net8.0-windows</TargetFramework>
-  <RazorLangVersion>7.0</RazorLangVersion>
-  <Version>8.0.0.0</Version>
-  <AssemblyVersion>8.0.0.0</AssemblyVersion>
-  <FileVersion>8.0.0.0</FileVersion>
-  <InformationalVersion>8.0.0.0-09/23/2023 19:02:33</InformationalVersion>
-  <Copyright>Dr. Holger Schwichtenberg, www.IT-Visions.de 2019-2023</Copyright>
-  <UserSecretsId>dea999a2-e05e-4e12-a9b7-c300e5791ab7</UserSecretsId>
- </PropertyGroup>
+ <!--Hinweis: <TargetFramework> und Versionsnummer+Metadaten für App kommen aus Directory.Build.props-->
 
- <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+ <PropertyGroup>
+  <UserSecretsId>dea999a2-e05e-4e12-a9b7-c300e5791ab7</UserSecretsId>
   <NoWarn>1701;1702;1998</NoWarn>
+  <IsTestProject>true</IsTestProject>
  </PropertyGroup>
 
  <ItemGroup>
