--- a/src/ITVRazorPagesRCL/ITVRazorPagesClassLibrary.csproj
+++ b/src/ITVRazorPagesRCL/ITVRazorPagesClassLibrary.csproj
@@ -1,12 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
+ <!--Hinweis: <TargetFramework> und Versionsnummer+Metadaten für App kommen aus Directory.Build.props-->
+
  <PropertyGroup>
-  <TargetFramework>net8.0</TargetFramework>
-  <Version>8.0.0.0</Version>
-  <AssemblyVersion>8.0.0.0</AssemblyVersion>
-  <FileVersion>8.0.0.0</FileVersion>
-  <InformationalVersion>8.0.0.0-09/23/2023 19:02:32</InformationalVersion>
-  <Copyright>Dr. Holger Schwichtenberg, www.IT-Visions.de 2019-2023</Copyright>
   <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
  </PropertyGroup>
 
@@ -19,6 +15,5 @@
    <Pack>$(IncludeRazorContentInPack)</Pack>
   </Content>
  </ItemGroup>
-
 
 </Project>
