--- a/src/MiracleList_BU/MiracleList_BU.csproj
+++ b/src/MiracleList_BU/MiracleList_BU.csproj
@@ -13,6 +13,9 @@
   <Nullable>enable</Nullable>
   <ImplicitUsings>enable</ImplicitUsings>
  </PropertyGroup>
+ <ItemGroup>
+   <_WebToolingArtifacts Remove="Properties\PublishProfiles\MiracleList-BU - Azure-Deployment.pubxml" />
+ </ItemGroup>
 
  <!--Projekte und NuGet-Pakete-->
  <ItemGroup>
