Update auf .NET 8.0.0 RTM

--- a/Test/WebserviceTests/WebserviceTests.csproj
+++ b/Test/WebserviceTests/WebserviceTests.csproj
@@ -26,8 +26,8 @@
 
  <ItemGroup>
   <ProjectReference Include="..\..\src\MiracleListAPI_Proxy\MiracleListAPI_Proxy.csproj" />
-  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.0-rc.2.23480.2" />
-  <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="8.0.0-rc.2.23480.2" />
+  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.*" />
+  <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="8.0.*" />
  </ItemGroup>
 
 </Project>
