--- a/src/MiracleList_BD/MiracleList_BD.csproj
+++ b/src/MiracleList_BD/MiracleList_BD.csproj
@@ -47,7 +47,7 @@
  <ItemGroup>
   <!--Standardreferenzen für BD-->
   <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Wpf" Version="8.0.0-rc.1.9171" />
-  <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.0-rc.2.23479.6" />
+  <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.*" />
  </ItemGroup>
 
  <!--COM-Referenzen für Word-Interop-->
