--- a/src/MiracleList_Interfaces/MiracleList_Interfaces.csproj
+++ b/src/MiracleList_Interfaces/MiracleList_Interfaces.csproj
@@ -9,8 +9,8 @@
 
  <ItemGroup>
   <ProjectReference Include="..\BO\BO.csproj" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.0-rc.2.23480.2" />
-  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.0-rc.2.23480.2" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.*" />
+  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.*" />
  </ItemGroup>
 
 </Project>
