--- a/src/MiracleList_BW/MiracleList_BW.csproj
+++ b/src/MiracleList_BW/MiracleList_BW.csproj
@@ -14,10 +14,10 @@
   <StartupObject>Web.Program</StartupObject>
   <UserSecretsId>1a22018c-6aab-42f2-8be5-0a4cedeeb272</UserSecretsId>
   <NoWarn>1701;1702;1998</NoWarn>
-  <!--für Zeigerprogrammierung erlauben neue JSinterop seit Blazor WebAssembly 7.0-->
+  <!--für Zeigerprogrammierung erlauben für neue JSinterop seit Blazor WebAssembly 7.0-->
   <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   <!--Optional für AOT-Kompilierung-->
-  <!--<RunAOTCompilation>true</RunAOTCompilation>-->
+  <RunAOTCompilation>true</RunAOTCompilation>
  </PropertyGroup>
 
  <!--für PWA-->
