Verbesserung Performance-Messungen Anpassungen für Deployment

--- a/src/MiracleList_BD/MiracleList_BD.csproj
+++ b/src/MiracleList_BD/MiracleList_BD.csproj
@@ -67,23 +67,8 @@
  <ItemGroup>
   <Compile Include="..\MiracleList_BS\Authentication\MLAuthenticationStateProvider2Tier.cs" Link="Web\Authentication\MLAuthenticationStateProvider2Tier.cs" />
  </ItemGroup>
- <ItemGroup>
-   <None Include="wwwroot\css\bootstrap\bootstrap.min.css" />
-   <None Include="wwwroot\css\bootstrap\bootstrap.min.css.map" />
-   <None Include="wwwroot\css\open-iconic\FONT-LICENSE" />
-   <None Include="wwwroot\css\open-iconic\font\css\open-iconic-bootstrap.min.css" />
-   <None Include="wwwroot\css\open-iconic\font\fonts\open-iconic.eot" />
-   <None Include="wwwroot\css\open-iconic\font\fonts\open-iconic.otf" />
-   <None Include="wwwroot\css\open-iconic\font\fonts\open-iconic.svg" />
-   <None Include="wwwroot\css\open-iconic\font\fonts\open-iconic.ttf" />
-   <None Include="wwwroot\css\open-iconic\font\fonts\open-iconic.woff" />
-   <None Include="wwwroot\css\open-iconic\ICON-LICENSE" />
-   <None Include="wwwroot\css\open-iconic\README.md" />
-   <None Include="wwwroot\css\site.css" />
-   <None Include="wwwroot\index.html" />
- </ItemGroup>
 
- <!--Einstellungen für BD -->
+ <!--Einstellungen für BD: wwwRoot-Ordner mit ins Ausgabeverzeichnis -->
  <ItemGroup>
   <None Update="wwwroot\**">
    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
