--- a/src/MiracleList_BW/MiracleList_BW.csproj
+++ b/src/MiracleList_BW/MiracleList_BW.csproj
@@ -19,6 +19,10 @@
   <!--Optional für AOT-Kompilierung-->
   <RunAOTCompilation>true</RunAOTCompilation>
  </PropertyGroup>
+ <ItemGroup>
+   <_WebToolingArtifacts Remove="Properties\PublishProfiles\FolderProfile_AOT.pubxml" />
+   <_WebToolingArtifacts Remove="Properties\PublishProfiles\FolderProfile_JITerpreter.pubxml" />
+ </ItemGroup>
 
  <!--für PWA-->
  <ItemGroup>
