--- a/Test/PlaywrightTests/PlaywrightTests.csproj
+++ b/Test/PlaywrightTests/PlaywrightTests.csproj
@@ -10,7 +10,7 @@
  </PropertyGroup>
 
  <ItemGroup>
-  <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.12.1" />
+  <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.12.*" />
   <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0-preview-23503-02" />
   <PackageReference Include="Microsoft.Playwright.MSTest" Version="1.39.0" />
   <PackageReference Include="MSTest.TestAdapter" Version="3.1.1" />
