--- a/src/BL/BL.csproj
+++ b/src/BL/BL.csproj
@@ -25,7 +25,7 @@
  </ItemGroup>
 
  <ItemGroup>
-  <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.12.1" />
+  <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.12.*" />
   <PackageReference Include="ITV.EFCoreUtil" Version="3.1.0" />
   <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="8.0.*" />
   <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.*" />
