--- a/src/EFCTools/EFCTools.csproj
+++ b/src/EFCTools/EFCTools.csproj
@@ -18,7 +18,7 @@
   <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.*" />
   <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.*" />
   <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.*" />
-  <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.12.1" />
+  <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.12.*" />
  </ItemGroup>
 
  <ItemGroup>
