--- a/src/ITVisions.Blazor/ITVisions.Blazor.csproj
+++ b/src/ITVisions.Blazor/ITVisions.Blazor.csproj
@@ -40,7 +40,7 @@
  <ItemGroup>
   <PackageReference Include="Blazored.LocalStorage" Version="4.4.*" />
   <PackageReference Include="Blazored.SessionStorage" Version="2.4.*" />
-  <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.12.3" />
+  <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.12.*" />
   <PackageReference Include="Microsoft.AspNetCore.Components" Version="8.0.0" />
   <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.0" />
   <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.*" />
