--- a/src/ITVisions.Blazor/ITVisions.Blazor.csproj
+++ b/src/ITVisions.Blazor/ITVisions.Blazor.csproj
@@ -1,10 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
  <!--Hinweis: Hier werden eigene Werte statt Directory.Build.props verwendet, da diese (auch in anderen Projekten verwendete!) Komponente unabhängig versioniert wird!-->
- 
+
  <!--Runtime-->
  <PropertyGroup>
   <TargetFramework>net8.0</TargetFramework>
+ </PropertyGroup>
+
+ <PropertyGroup>
+  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
  </PropertyGroup>
 
  <!--Namen-->
@@ -16,9 +20,9 @@
 
  <!--Versionen-->
  <PropertyGroup>
-  <Version>8.0.0.0</Version>
-  <AssemblyVersion>8.0.0.0</AssemblyVersion>
-  <FileVersion>8.0.0.0</FileVersion>
+  <Version>8.1.0.0</Version>
+  <AssemblyVersion>8.1.0.0</AssemblyVersion>
+  <FileVersion>8.1.0.0</FileVersion>
  </PropertyGroup>
 
  <!--Autor-->
@@ -40,7 +44,7 @@
  <ItemGroup>
   <PackageReference Include="Blazored.LocalStorage" Version="4.4.*" />
   <PackageReference Include="Blazored.SessionStorage" Version="2.4.*" />
-  <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.12.*" />
+  <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.13.2" />
   <PackageReference Include="Microsoft.AspNetCore.Components" Version="8.0.0" />
   <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.0" />
   <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.*" />
