--- a/Test/BlazorTests/BlazorTests.csproj
+++ b/Test/BlazorTests/BlazorTests.csproj
@@ -9,13 +9,13 @@
  </PropertyGroup>
 
  <ItemGroup>
-  <PackageReference Include="Blazored.LocalStorage" Version="4.4.0" />
-  <PackageReference Include="bunit" Version="1.25.3" />
-  <PackageReference Include="JustMock" Version="2023.3.1122.188" />
-  <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.0" />
-  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
-  <PackageReference Include="xunit" Version="2.6.2" />
-  <PackageReference Include="xunit.runner.visualstudio" Version="2.5.4">
+  <PackageReference Include="Blazored.LocalStorage" Version="4.4.*" />
+  <PackageReference Include="bunit" Version="1.25.*" />
+  <PackageReference Include="JustMock" Version="2023.3.*" />
+  <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.*" />
+  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0-preview-23503-02" />
+  <PackageReference Include="xunit" Version="2.6.*" />
+  <PackageReference Include="xunit.runner.visualstudio" Version="2.5.*">
    <PrivateAssets>all</PrivateAssets>
    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
   </PackageReference>
