--- a/Test/PlaywrightTests/PlaywrightTests.csproj
+++ b/Test/PlaywrightTests/PlaywrightTests.csproj
@@ -10,12 +10,12 @@
  </PropertyGroup>
 
  <ItemGroup>
-  <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.12.*" />
+  <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.13.*" />
   <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0-preview-23503-02" />
-  <PackageReference Include="Microsoft.Playwright.MSTest" Version="1.39.0" />
-  <PackageReference Include="MSTest.TestAdapter" Version="3.1.1" />
-  <PackageReference Include="MSTest.TestFramework" Version="3.1.1" />
-  <PackageReference Include="coverlet.collector" Version="6.0.0">
+  <PackageReference Include="Microsoft.Playwright.MSTest" Version="1.39.*" />
+  <PackageReference Include="MSTest.TestAdapter" Version="3.1.*" />
+  <PackageReference Include="MSTest.TestFramework" Version="3.1.*" />
+  <PackageReference Include="coverlet.collector" Version="6.0.*">
     <PrivateAssets>all</PrivateAssets>
     <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
   </PackageReference>
