--- a/Test/UnitTests/UnitTests.csproj
+++ b/Test/UnitTests/UnitTests.csproj
@@ -15,8 +15,6 @@
   <AssemblyName>UnitTests</AssemblyName>
   <PackageId>UnitTests</PackageId>
   <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
-
-  
   <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
   <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
   <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
@@ -43,24 +41,24 @@
 
  <ItemGroup>
   <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="8.0.*" />
-  <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.0-rc.1.23419.6" />
-  <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0-rc.1.23419.4" />
+  <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.*" />
+  <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.*" />
   <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="8.0.0-rc.1.23419.4" />
-  <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.0-rc.1.23419.4" />
-  <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0-rc.1.23419.4" />
-  <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.0-rc.1.23419.4" />
-  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0-preview-23424-02" />
-  <PackageReference Include="NHibernateProfiler.Appender" Version="6.0.6040" />
-  <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
-  <PackageReference Include="xunit.runner.visualstudio" Version="2.5.2-pre.3">
+  <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.*" />
+  <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.*" />
+  <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.*" />
+  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0-preview-23503-02" />
+  <PackageReference Include="NHibernateProfiler.Appender" Version="6.0.*" />
+  <PackageReference Include="System.Data.SqlClient" Version="4.8.*" />
+  <PackageReference Include="xunit.runner.visualstudio" Version="2.5.*">
    <PrivateAssets>all</PrivateAssets>
    <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
   </PackageReference>
-  <PackageReference Include="xunit" Version="2.5.1" />
-  <PackageReference Include="Xunit.SkippableFact" Version="1.4.13" />
-  <PackageReference Include="DeepEqual" Version="4.2.1" />
-  <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.12.*" />
-  <PackageReference Include="ITV.EFCoreUtil" Version="3.1.0" />
+  <PackageReference Include="xunit" Version="2.6.*" />
+  <PackageReference Include="Xunit.SkippableFact" Version="1.4.*" />
+  <PackageReference Include="DeepEqual" Version="4.2.*" />
+  <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.13.*" />
+  <PackageReference Include="ITV.EFCoreUtil" Version="8.0.*" />
  </ItemGroup>
 
  <ItemGroup>
