--- a/src/DA/DA.csproj
+++ b/src/DA/DA.csproj
@@ -55,7 +55,7 @@
 
  <ItemGroup>
   <PackageReference Include="Devart.Data.Oracle.EFCore" Version="10.1.151.7" />
-  <PackageReference Include="ITV.EFCoreUtil" Version="3.1.0" />
+  <PackageReference Include="ITV.EFCoreUtil" Version="8.0.*" />
   <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.*" />
   <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.*" />
   <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.*" />
