--- a/src/MiracleList_Backend/MiracleList_Backend.csproj
+++ b/src/MiracleList_Backend/MiracleList_Backend.csproj
@@ -54,20 +54,14 @@
 
  <ItemGroup>
   <!--<PackageReference Include="EntityFrameworkProfiler" Version="5.0.5032" />-->
-  <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.12.*" />
-  <PackageReference Include="ITV.EFCoreUtil" Version="3.1.*" />
+  <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.13.*" />
+  <PackageReference Include="ITV.EFCoreUtil" Version="8.0.*" />
   <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.*" />
-  <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="7.0.*" />
+  <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="8.0.0" />
   <PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.*" />
   <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.*" />
   <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.*" />
-
-  <!--Nur für Bug in RC2-->
-  <PackageReference Include="Microsoft.Net.Compilers.Razor.Toolset" Version="7.0.0-preview.23512.5">
-   <PrivateAssets>all</PrivateAssets>
-   <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-  </PackageReference>
   
  </ItemGroup>
 
