--- a/Test/PlaywrightTests/PlaywrightTests.csproj
+++ b/Test/PlaywrightTests/PlaywrightTests.csproj
@@ -11,7 +11,7 @@
 
  <ItemGroup>
   <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.13.*" />
-  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0-preview-23503-02" />
+  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0-release-23619-01" />
   <PackageReference Include="Microsoft.Playwright.MSTest" Version="1.39.*" />
   <PackageReference Include="MSTest.TestAdapter" Version="3.1.*" />
   <PackageReference Include="MSTest.TestFramework" Version="3.1.*" />
