--- a/Test/SeleniumTests/SeleniumTests.csproj
+++ b/Test/SeleniumTests/SeleniumTests.csproj
@@ -22,11 +22,11 @@
   <PackageReference Include="DotNetSeleniumExtras.PageObjects" Version="3.11.*" />
   <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.*" />
   <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.*" />
-  <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="8.0.0-rc.1.23419.4" />
+  <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="8.0.*" />
   <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.*" />
   <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.*" />
-  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0-preview-23503-02" />
-  <PackageReference Include="Microsoft.Windows.Compatibility" Version="8.0.0-rc.1.23420.5" />
+  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0-release-23619-01" />
+  <PackageReference Include="Microsoft.Windows.Compatibility" Version="8.0.*" />
   <PackageReference Include="MSTest.TestAdapter" Version="3.1.*" />
   <PackageReference Include="MSTest.TestFramework" Version="3.1.*" />
   <PackageReference Include="Selenium.Firefox.WebDriver" Version="0.27.*" />
