--- a/Test/WebserviceTests/WebserviceTests.csproj
+++ b/Test/WebserviceTests/WebserviceTests.csproj
@@ -10,22 +10,22 @@
  </PropertyGroup>
 
  <ItemGroup>
-  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0-preview-23503-02" />
-  <PackageReference Include="xunit" Version="2.6.2" />
-  <PackageReference Include="DeepEqual" Version="4.2.1" />
-  <PackageReference Include="Xunit.SkippableFact" Version="1.4.13" />
-  <PackageReference Include="xunit.runner.visualstudio" Version="2.5.4">
-   <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-   <PrivateAssets>all</PrivateAssets>
-  </PackageReference>
-  <PackageReference Include="coverlet.collector" Version="6.0.0">
-   <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-   <PrivateAssets>all</PrivateAssets>
-  </PackageReference>
- </ItemGroup>
-
- <ItemGroup>
   <ProjectReference Include="..\..\src\MiracleListAPI_Proxy\MiracleListAPI_Proxy.csproj" />
+ </ItemGroup>
+ 
+ <ItemGroup>
+  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0-release-23619-01" />
+  <PackageReference Include="xunit" Version="2.6.*" />
+  <PackageReference Include="DeepEqual" Version="4.2.*" />
+  <PackageReference Include="Xunit.SkippableFact" Version="1.4.*" />
+  <PackageReference Include="xunit.runner.visualstudio" Version="2.5.*">
+   <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+   <PrivateAssets>all</PrivateAssets>
+  </PackageReference>
+  <PackageReference Include="coverlet.collector" Version="6.0.*">
+   <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+   <PrivateAssets>all</PrivateAssets>
+  </PackageReference>
   <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.*" />
   <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="8.0.*" />
  </ItemGroup>
