--- a/src/ITVisions.Blazor/ITVisions.Blazor.csproj
+++ b/src/ITVisions.Blazor/ITVisions.Blazor.csproj
@@ -45,8 +45,8 @@
   <PackageReference Include="Blazored.LocalStorage" Version="4.4.*" />
   <PackageReference Include="Blazored.SessionStorage" Version="2.4.*" />
   <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.13.*" />
-  <PackageReference Include="Microsoft.AspNetCore.Components" Version="8.0.0" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.0" />
+  <PackageReference Include="Microsoft.AspNetCore.Components" Version="8.0.*" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.*" />
   <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.*" />
   <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.*" />
   <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.*" />
