--- a/src/MiracleList_BW/MiracleList_BW.csproj
+++ b/src/MiracleList_BW/MiracleList_BW.csproj
@@ -30,12 +30,12 @@
  </PropertyGroup>
 
  <!--Optional Multi-Threading-->
- <!--<PropertyGroup>
+ <PropertyGroup>
   <WasmEnableThreads>true</WasmEnableThreads>
  </PropertyGroup>
   <ItemGroup>
   <PackageReference Include="Microsoft.NET.WebAssembly.Threading" Version="8.0.*" />
- </ItemGroup>-->
+ </ItemGroup>
 
  <!--für PWA-->
  <ItemGroup>
