--- a/src/MiracleList_BS/MiracleList_BS.csproj
+++ b/src/MiracleList_BS/MiracleList_BS.csproj
@@ -28,7 +28,15 @@
  <ItemGroup>
   <!--Zusätzliche NuGet-Pakete von Microsoft -->
   <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="8.0.*" />
-
  </ItemGroup>
+
+ <!--Für Hot Reload-->
+ <!--<ItemGroup>
+  <Watch Include="..\SamplesRCL\*.csproj" />
+  <Watch Include="..\SamplesRCL\**.razor" />
+  <Watch Include="..\SamplesRCL\***.cs" />
+  <Watch Remove="..\SamplesRCL\bin*" />
+  <Watch Remove="..\SamplesRCL\obj**" />
+ </ItemGroup>-->
 
 </Project>
