--- a/src/MiracleList_BW/MiracleList_BW.csproj
+++ b/src/MiracleList_BW/MiracleList_BW.csproj
@@ -30,12 +30,14 @@
  </PropertyGroup>
 
  <!--Optional Multi-Threading-->
- <PropertyGroup>
+ <!--<PropertyGroup>
   <WasmEnableThreads>true</WasmEnableThreads>
  </PropertyGroup>
   <ItemGroup>
   <PackageReference Include="Microsoft.NET.WebAssembly.Threading" Version="8.0.*" />
- </ItemGroup>
+ </ItemGroup>-->
+
+ <!--Your HTTPS server and/or proxy must be configured to send HTTP headers similar to Cross-Origin-Embedder-Policy:require-corp and Cross-Origin-Opener-Policy:same-origin in order to enable multi-threading support in end-user web browsers for security reasons. (Cross-Origin-Embedder-Policy:require-corp)-->
 
  <!--für PWA-->
  <ItemGroup>
