Neues Pulishing-Profile

--- a/.gitignore
+++ b/.gitignore
@@ -268,3 +268,4 @@ __pycache__/
 /src/MiracleList_BS/wwwroot/
 /ConsoleApp1/ConsoleApp1.csproj
 /ConsoleApp1/Program.cs
+/src/MiracleList_BW/Properties/PublishProfiles/MiracleListBW8 - Web Deploy.pubxml
