--- a/nuget.config
+++ b/nuget.config
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
  <packageSources>
+  <clear />
   <!--Verweis auf das lokale Unterzeichnis ProjectPackages
   ACHTUNG: Dies muss in Azure DevOps-Pipeline ersetzt werden durch ..\s\ProjectPackages-->
   <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
