--- a/src/BO/BO.csproj
+++ b/src/BO/BO.csproj
@@ -11,7 +11,7 @@
  </PropertyGroup>
 
  <ItemGroup>
-  <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.13.*" />
+  <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.16.2" />
   <PackageReference Include="FluentValidation" Version="11.8.0" />
   <PackageReference Include="Newtonsoft.Json" Version="13.0.*" />
   <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
