--- a/Test/BlazorTests/BlazorTests.csproj
+++ b/Test/BlazorTests/BlazorTests.csproj
@@ -9,12 +9,12 @@
  </PropertyGroup>
 
  <ItemGroup>
-  <PackageReference Include="Blazored.LocalStorage" Version="4.4.*" />
-  <PackageReference Include="bunit" Version="1.25.*" />
-  <PackageReference Include="JustMock" Version="2023.3.*" />
+  <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
+  <PackageReference Include="bunit" Version="1.27.17" />
+  <PackageReference Include="JustMock" Version="2024.1.124.247" />
   <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.*" />
-  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0-release-23619-01" />
-  <PackageReference Include="xunit" Version="2.6.*" />
+  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
+  <PackageReference Include="xunit" Version="2.7.0" />
   <PackageReference Include="xunit.runner.visualstudio" Version="2.5.*">
    <PrivateAssets>all</PrivateAssets>
    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
