--- a/Test/PlaywrightTests/PlaywrightTests.csproj
+++ b/Test/PlaywrightTests/PlaywrightTests.csproj
@@ -11,10 +11,10 @@
 
  <ItemGroup>
   <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.16.2" />
-  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0-release-23619-01" />
-  <PackageReference Include="Microsoft.Playwright.MSTest" Version="1.39.*" />
-  <PackageReference Include="MSTest.TestAdapter" Version="3.1.*" />
-  <PackageReference Include="MSTest.TestFramework" Version="3.1.*" />
+  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
+  <PackageReference Include="Microsoft.Playwright.MSTest" Version="1.42.0" />
+  <PackageReference Include="MSTest.TestAdapter" Version="3.2.2" />
+  <PackageReference Include="MSTest.TestFramework" Version="3.2.2" />
   <PackageReference Include="coverlet.collector" Version="6.0.*">
     <PrivateAssets>all</PrivateAssets>
     <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
