--- a/Test/SeleniumTests/SeleniumTests.csproj
+++ b/Test/SeleniumTests/SeleniumTests.csproj
@@ -25,14 +25,14 @@
   <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="8.0.*" />
   <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.*" />
   <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.*" />
-  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0-release-23619-01" />
+  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
   <PackageReference Include="Microsoft.Windows.Compatibility" Version="8.0.*" />
-  <PackageReference Include="MSTest.TestAdapter" Version="3.1.*" />
-  <PackageReference Include="MSTest.TestFramework" Version="3.1.*" />
+  <PackageReference Include="MSTest.TestAdapter" Version="3.2.2" />
+  <PackageReference Include="MSTest.TestFramework" Version="3.2.2" />
   <PackageReference Include="Selenium.Firefox.WebDriver" Version="0.27.*" />
   <PackageReference Include="Selenium.Microsoft.Webdriver2" Version="2.0.*" />
-  <PackageReference Include="Selenium.Support" Version="4.12.*" />
-  <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="117.0.*" />
+  <PackageReference Include="Selenium.Support" Version="4.18.1" />
+  <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="122.0.6261.11100" />
  </ItemGroup>
 
  <ItemGroup>
