--- a/Test/WebserviceTests/WebserviceTests.csproj
+++ b/Test/WebserviceTests/WebserviceTests.csproj
@@ -14,9 +14,9 @@
  </ItemGroup>
  
  <ItemGroup>
-  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0-release-23619-01" />
-  <PackageReference Include="xunit" Version="2.6.*" />
-  <PackageReference Include="DeepEqual" Version="4.2.*" />
+  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
+  <PackageReference Include="xunit" Version="2.7.0" />
+  <PackageReference Include="DeepEqual" Version="5.0.0" />
   <PackageReference Include="Xunit.SkippableFact" Version="1.4.*" />
   <PackageReference Include="xunit.runner.visualstudio" Version="2.5.*">
    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
