--- a/src/BL/BL.csproj
+++ b/src/BL/BL.csproj
@@ -32,7 +32,7 @@
   <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.*" />
   <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.*" />
   <PackageReference Include="System.Security.Cryptography.Algorithms" Version="4.3.1" />
-  <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="8.0.0-rc.2.23480.1-01" />
+  <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="8.102.2" />
  </ItemGroup>
 
  <ItemGroup>
