--- a/src/MLBlazorRCL/MLBlazorRCL.csproj
+++ b/src/MLBlazorRCL/MLBlazorRCL.csproj
@@ -20,7 +20,7 @@
   <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.*" />
   <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="8.0.*" />
   <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="8.0.*" />
-  <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0-preview3.23201.1" />
+  <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0" />
   <PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.*" />
   <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.*" />
   <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.*" />
@@ -32,10 +32,10 @@
   <!--Zusätzliche Pakete von Anderen-->
   <PackageReference Include="Blazor.ContextMenu" Version="1.16.*" />
   <PackageReference Include="Blazor.Extensions.Logging" Version="2.0.*" />
-  <PackageReference Include="Blazored.LocalStorage" Version="4.4.*" />
-  <PackageReference Include="Blazored.Toast" Version="4.1.*" />
+  <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
+  <PackageReference Include="Blazored.Toast" Version="4.2.0" />
   <PackageReference Include="Blazored.FluentValidation" Version="2.1.*" />
-  <PackageReference Include="Radzen.Blazor" Version="4.18.*" />
+  <PackageReference Include="Radzen.Blazor" Version="4.26.1" />
  </ItemGroup>
 
  <ItemGroup>
