--- a/src/MiracleList_Backend/MiracleList_Backend.csproj
+++ b/src/MiracleList_Backend/MiracleList_Backend.csproj
@@ -56,12 +56,12 @@
   <!--<PackageReference Include="EntityFrameworkProfiler" Version="5.0.5032" />-->
   <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.16.2" />
   <PackageReference Include="ITV.EFCoreUtil" Version="8.0.*" />
-  <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.*" />
+  <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.22.0" />
   <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="8.0.*" />
   <PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.*" />
   <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.*" />
-  <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.*" />
+  <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.3" />
   
  </ItemGroup>
 
