--- a/src/SamplesRCL/SamplesRCL.csproj
+++ b/src/SamplesRCL/SamplesRCL.csproj
@@ -22,15 +22,15 @@
   <PackageReference Include="Microsoft.AspNetCore.Components" Version="8.0.*" />
   <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.*" />
   <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.*" />
-  <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0-preview3.23201.1" />
+  <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0" />
   <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="8.0.*" />
   <PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.*" />
-  <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="5.2.*">
+  <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="5.4.2">
     <PrivateAssets>all</PrivateAssets>
     <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
   </PackageReference>
   <PackageReference Include="System.DirectoryServices" Version="8.0.*" />
-  <PackageReference Include="Blazored.LocalStorage" Version="4.4.*" />
+  <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
  </ItemGroup>
 
  <ItemGroup>
