--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,7 +2,8 @@
 
  <!--Verwendete .NET-Version-->
  <PropertyGroup>
-  <TargetFramework>net8.0</TargetFramework>
+  <!--<TargetFramework>net8.0</TargetFramework>-->
+  <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
  </PropertyGroup>
 
  <!--App-Version-->
