Fixes für Lazy Loading

--- a/src/MiracleList_BU.Client/MiracleList_BU.Client.csproj
+++ b/src/MiracleList_BU.Client/MiracleList_BU.Client.csproj
@@ -38,5 +38,10 @@
  <ItemGroup>
    <Folder Include="Authentication\" />
  </ItemGroup>
+
+ <!--Lazy Loading-->
+ <!--<ItemGroup>
+  <BlazorWebAssemblyLazyLoad Include="SamplesRCL.wasm" />
+ </ItemGroup>-->
  
 </Project>
