--- a/src/BO/BO.csproj
+++ b/src/BO/BO.csproj
@@ -11,8 +11,8 @@
  </PropertyGroup>
 
  <ItemGroup>
-  <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.16.2" />
-  <PackageReference Include="FluentValidation" Version="11.9.0" />
+  <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.18.1" />
+  <PackageReference Include="FluentValidation" Version="11.*" />
   <PackageReference Include="Newtonsoft.Json" Version="13.0.*" />
   <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
  </ItemGroup>
