--- a/src/DA/DA.csproj
+++ b/src/DA/DA.csproj
@@ -56,7 +56,7 @@
  <!--EF Core-->
  <ItemGroup>
   <PackageReference Include="ITV.EFCoreUtil" Version="8.0.*" />
-  <PackageReference Include="EntityFrameworkProfiler" Version="6.0.6046" />
+  <PackageReference Include="EntityFrameworkProfiler" Version="6.0.*" />
   <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.*" />
  </ItemGroup>
 
@@ -65,8 +65,8 @@
   <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.*" />
   <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.*" />
   <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.*" />
-  <PackageReference Include="Devart.Data.Oracle.EFCore" Version="10.3.10.8" />
-  <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.1" />
+  <PackageReference Include="Devart.Data.Oracle.EFCore" Version="10.3.*" />
+  <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.*" />
  </ItemGroup>
 
  <ItemGroup>
