--- a/Test/UnitTests/UnitTests.csproj
+++ b/Test/UnitTests/UnitTests.csproj
@@ -47,17 +47,17 @@
   <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.*" />
   <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.*" />
   <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.*" />
-  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
+  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.*" />
   <PackageReference Include="NHibernateProfiler.Appender" Version="6.0.*" />
   <PackageReference Include="System.Data.SqlClient" Version="4.8.*" />
-  <PackageReference Include="xunit.runner.visualstudio" Version="2.5.*">
+  <PackageReference Include="xunit.runner.visualstudio" Version="2.*">
    <PrivateAssets>all</PrivateAssets>
    <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
   </PackageReference>
-  <PackageReference Include="xunit" Version="2.7.0" />
-  <PackageReference Include="Xunit.SkippableFact" Version="1.4.*" />
-  <PackageReference Include="DeepEqual" Version="5.0.0" />
-  <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.16.2" />
+  <PackageReference Include="xunit" Version="2.*" />
+  <PackageReference Include="Xunit.SkippableFact" Version="1.*" />
+  <PackageReference Include="DeepEqual" Version="5.*" />
+  <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.18.1" />
   <PackageReference Include="ITV.EFCoreUtil" Version="8.0.*" />
  </ItemGroup>
 
