--- a/src/SamplesRCL/SamplesRCL.csproj
+++ b/src/SamplesRCL/SamplesRCL.csproj
@@ -25,7 +25,7 @@
   <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0" />
   <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="8.0.*" />
   <PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.*" />
-  <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="5.4.2">
+  <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="5.4.*">
     <PrivateAssets>all</PrivateAssets>
     <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
   </PackageReference>
