--- a/Test/SeleniumTests/SeleniumTests.csproj
+++ b/Test/SeleniumTests/SeleniumTests.csproj
@@ -25,14 +25,14 @@
   <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="8.0.*" />
   <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.*" />
   <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.*" />
-  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.*" />
+  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
   <PackageReference Include="Microsoft.Windows.Compatibility" Version="8.0.*" />
   <PackageReference Include="MSTest.TestAdapter" Version="3.*" />
   <PackageReference Include="MSTest.TestFramework" Version="3.*" />
   <PackageReference Include="Selenium.Firefox.WebDriver" Version="0.27.*" />
   <PackageReference Include="Selenium.Microsoft.Webdriver2" Version="2.0.*" />
-  <PackageReference Include="Selenium.Support" Version="4.18.1" />
-  <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="122.0.6261.11100" />
+  <PackageReference Include="Selenium.Support" Version="4.24.0" />
+  <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="128.0.6613.11900" />
  </ItemGroup>
 
  <ItemGroup>
