--- a/src/BL/BL.csproj
+++ b/src/BL/BL.csproj
@@ -32,7 +32,7 @@
   <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.*" />
   <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.*" />
   <PackageReference Include="System.Security.Cryptography.Algorithms" Version="4.3.1" />
-  <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="8.*" />
+  <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="8.103.3" />
  </ItemGroup>
 
  <ItemGroup>
