--- a/src/MLBlazorRCL/MLBlazorRCL.csproj
+++ b/src/MLBlazorRCL/MLBlazorRCL.csproj
@@ -20,7 +20,7 @@
   <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.*" />
   <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="8.0.*" />
   <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="8.0.*" />
-  <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0" />
+  <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
   <PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.*" />
   <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.*" />
   <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.*" />
@@ -34,7 +34,7 @@
   <PackageReference Include="Blazor.Extensions.Logging" Version="2.*" />
   <PackageReference Include="Blazored.LocalStorage" Version="4.*" />
   <PackageReference Include="Blazored.Toast" Version="4.*" />
-  <PackageReference Include="Blazored.FluentValidation" Version="2.1.*" />
+  <PackageReference Include="Blazored.FluentValidation" Version="2.2.0" />
   <PackageReference Include="Radzen.Blazor" Version="4.*" />
  </ItemGroup>
 
