--- a/src/MiracleList_Backend/MiracleList_Backend.csproj
+++ b/src/MiracleList_Backend/MiracleList_Backend.csproj
@@ -66,7 +66,7 @@
   <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.22.0" />
   <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="8.0.*" />
   <PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.*" />
-  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.*" />
+  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.3" />
   <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.*" />
   <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.*" /> 
  </ItemGroup>
