--- a/src/SamplesRCL/SamplesRCL.csproj
+++ b/src/SamplesRCL/SamplesRCL.csproj
@@ -22,10 +22,10 @@
   <PackageReference Include="Microsoft.AspNetCore.Components" Version="8.0.*" />
   <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.*" />
   <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.*" />
-  <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0" />
+  <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
   <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="8.0.*" />
   <PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.*" />
-  <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="5.4.*">
+  <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="5.6.2">
     <PrivateAssets>all</PrivateAssets>
     <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
   </PackageReference>
