--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,18 +2,18 @@
 
  <!--Verwendete .NET-Version-->
  <PropertyGroup>
-  <TargetFramework>net8.0</TargetFramework>
+  <TargetFramework>net9.0</TargetFramework>
   <!--<TargetFrameworks>net8.0;net9.0</TargetFrameworks>-->
  </PropertyGroup>
 
  <!--App-Version-->
  <PropertyGroup>
-  <Version>8.9.0</Version>
-  <AssemblyVersion>8.9.0</AssemblyVersion>
-  <FileVersion>8.9.0</FileVersion>
-  <InformationalVersion>8.9.0-03/14/2024 10:11:16</InformationalVersion>
-  <ApplicationVersion>8</ApplicationVersion>
-  <ApplicationDisplayVersion>8.9.0</ApplicationDisplayVersion>
+  <Version>9.0.0</Version>
+  <AssemblyVersion>9.0.0</AssemblyVersion>
+  <FileVersion>9.0.0</FileVersion>
+  <InformationalVersion>9.0</InformationalVersion>
+  <ApplicationVersion>9</ApplicationVersion>
+  <ApplicationDisplayVersion>9.0</ApplicationDisplayVersion>
  </PropertyGroup>
 
  <!--App-Infos-->
@@ -23,7 +23,7 @@
   <Product>MiracleList</Product>
   <Copyright>(C) Dr. Holger Schwichtenberg (www.IT-Visions.de)</Copyright>
   <PackageProjectUrl>https://www.miraclelist.net</PackageProjectUrl>
-  <PackageReleaseNotes>Programmcodebeispiele zum Blazor 8.0-Buch von Dr. Holger Schwichtenberg für Buchversion 8.9.0</PackageReleaseNotes>
+  <PackageReleaseNotes>Programmcodebeispiele zum Blazor 9.0-Buch von Dr. Holger Schwichtenberg für Buchversion 9.0.0</PackageReleaseNotes>
  </PropertyGroup>
  
 </Project>
