--- a/src/BL/BL.csproj
+++ b/src/BL/BL.csproj
@@ -26,11 +26,11 @@
 
  <ItemGroup>
   <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.*" />
-  <PackageReference Include="ITV.EFCoreUtil" Version="8.0.*" />
-  <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="8.0.*" />
-  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.*" />
-  <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.*" />
-  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.*" />
+  <PackageReference Include="ITV.EFCoreUtil" Version="8.*" />
+  <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="9.0.0-*" />
+  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0-*" />
+  <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.0-*" />
+  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0-*" />
   <PackageReference Include="System.Security.Cryptography.Algorithms" Version="4.3.1" />
   <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="8.103.3" />
  </ItemGroup>
