--- a/src/MiracleList_BS/MiracleList_BS.csproj
+++ b/src/MiracleList_BS/MiracleList_BS.csproj
@@ -27,7 +27,7 @@
 
  <ItemGroup>
   <!--Zusätzliche NuGet-Pakete von Microsoft -->
-  <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="8.0.*" />
+  <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="9.0.0-*" />
  </ItemGroup>
 
  <!--Für Hot Reload-->
