--- a/src/MiracleList_BU.Client/MiracleList_BU.Client.csproj
+++ b/src/MiracleList_BU.Client/MiracleList_BU.Client.csproj
@@ -21,8 +21,8 @@
 
  <!--NuGet-Pakete-->
  <ItemGroup>
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.*" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="8.0.*" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.0-*" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="9.0.0-*" />
 
  </ItemGroup>
 
