--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -25,10 +25,12 @@
   <PackageProjectUrl>https://www.miraclelist.net</PackageProjectUrl>
   <PackageReleaseNotes>Programmcodebeispiele zum Blazor 9.0-Buch von Dr. Holger Schwichtenberg für Buchversion 9.0.0</PackageReleaseNotes>
  </PropertyGroup>
- 
- <!--Nur kritische NuGet-Sicherheits-Warnungen-->
+
+ <!--Aktuell keine NuGet-Sicherheits-Warnungen-->
  <PropertyGroup>
-  <NuGetAuditLevel>critical</NuGetAuditLevel>
+  <NuGetAudit>false</NuGetAuditMode>
+  <!--<NuGetAuditLevel>critical</NuGetAuditLevel>-->
+  <!--Nur kritische NuGet-Sicherheits-Warnungen-->
  </PropertyGroup>
  
 </Project>
